acabar dao i afegir ids